--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vsc-export",
 	"displayName": "VSC Export & Import",
 	"description": "VSCode extensions export and import",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"publisher": "aslamanver",
 	"repository": "https://github.com/aslamanver/vsc-export",
 	"license": "MIT",
@@ -25,7 +25,7 @@
 		"onCommand:extension.vsc-export",
 		"onCommand:extension.vsc-import"
 	],
-	"main": "./extension.js",
+	"main": "src/extension.js",
 	"contributes": {
 		"commands": [
 			{
@@ -41,7 +41,7 @@
 	"scripts": {
 		"lint": "eslint .",
 		"pretest": "npm run lint",
-		"test": "node_modules/mocha/bin/mocha ./test/tests.js"
+		"test": "mocha test/tests.js"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
